# plot-primes

./: .gitignore  Makefile  README.md  flake.nix  justfile  package.nix  plotprimes.py  pyproject.toml
nix/: package.nix  plotprimes.py
src/plotprimes/: __init__.py  plotprimes.py
tests/: test_plotprimes.py
