[project]
name = "plotprimes"
version = "0.0.1"
description = "Plot prime numbers on a polar coordinate system"
readme = "README.md"
authors = [
    { name = "Josh Tompkin", email = "jtompkin-dev@pm.me" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib"
]

[project.scripts]
plotprimes = "plotprimes:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
